2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Top Node Example): Merge into parent.

2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	Reorder nodes.

	* doc/texinfo.texi (Texinfo Document Structure, Writing a Node):
	Re-order.

2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	Document SHOW_MENU changes.

	* doc/texinfo.texi
	(Other Customization Variables) <SHOW_MENU>: Explain '1' and
	'sectiontoc' settings.
	(Invoking texi2any): Move '@vindex HEADERS' here.
	(Writing a Node): Take out material about menus and detailed
	menus.
	(Master Menu Parts, Top Node): Move material about menus here.
	Use consistent terminology re "master menu" and "detailed menu".

2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Move a line.

2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	End paragraph for @displaymath.

	* tp/Texinfo/Common.pm (%close_paragraph_commands),
	* tp/Texinfo/XS/parsetexi/commands.c (close_paragraph_command):
	Add @displaymath.
	* tp/Texinfo/Convert/HTML.pm (_convert_displaymath_command):
	Wrap output in a <div>.

2020-10-17  Gavin Smith  <gavinsmith0123@gmail.com>

	Document @displaymath and HTML_MATH.

	* doc/texinfo.texi (Inserting Math, Command List):
	Document @displaymath and options for HTML_MATH.

2020-10-17  Gavin Smith  <gavinsmith0123@gmail.com>

	@displaymath for docbook

	* tp/Texinfo/Convert/DocBook.pm (_convert): Wrap
	output for @displaymath in <informalequation> and
	<mathphrase>.

2020-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Info Format FAQ): New node.

2020-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/16raw.t (displaymath): New test.

2020-10-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (_mini_toc): Add bullets to
	list and remove section numbers.

2020-10-15  Gavin Smith  <gavinsmith0123@gmail.com>

	@displaymath for HTML.
	
	* tp/Texinfo/Convert/HTML.pm (_convert_displaymath_command):
	New function.
